# elenath

./: Cargo.toml  deny.toml
src/: main.rs
src/gui/: gui_widget.rs  message.rs  mod.rs  shared_canvas_functionality.rs  shared_widgets.rs
src/gui/dialog/: planet.rs  randomize_stars.rs  star.rs
src/gui/surface_view/: canvas_appearance.rs  draw_bodies.rs  draw_constellations.rs  viewport.rs  widget.rs
src/gui/table_view/: col_data.rs  widget.rs
src/gui/top_view/: canvas.rs  widget.rs
src/model/: planet.rs  star.rs
src/model/celestial_system/: mod.rs  planets.rs  stars.rs
