[package]
name = "elenath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro_coords = { git = "https://github.com/TheComamba/AstroCoords.git", branch="main" }
astro_utils = { git = "https://github.com/TheComamba/AstroUtils.git", branch="main" }
iced = { version = "0.13.0", default-features = false, features=["wgpu", "canvas", "lazy"] }
iced_aw = { version = "0.12.2", default-features = false, features = ["card"] }
rfd = "0.15.0" # file dialogs (all default features are needed)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
simple-si-units = { version = "1.1", default-features = false, features = ["serde"] }
