[package]
name = "elenath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro_coords = { git = "https://github.com/TheComamba/astro_coords.git", branch="main" }
astro_utils = { git = "https://github.com/TheComamba/astro_utils.git", branch="main" }
astro_units = { version = "1.0", default-features = false, features = [] }
iced = { version = "0.14.0", default-features = false, features=["wgpu", "canvas", "lazy", "thread-pool", "x11"] }
iced_aw = { version = "0.13.0", default-features = false, features = ["card"] }
rfd = "0.17.0" # file dialogs (all default features are needed)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
uom = { version = "0.37.0", default-features = false, features = ["f64", "si", "std"] } # Physical quantities
